2022-10-15T16:08:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256316387 # 532
* notice: last 14d: unq all: 39 5658
* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1172 77922
* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1171 77896
* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -1 -147 / +2 +259 -0 -0 / 2 259
* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]

2022-10-15T08:08:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3254961428 # 531
* notice: last 14d: unq all: 39 5684
* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1170 77968
* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1172 77922
* notice: prev exec diff / last date diff / accum: unq all: +2 +138 -0 -184 / +2 +138 -0 -0 / 2 138
* notice: removed / changed dates: [] / [2022-10-01 2022-10-15]

2022-10-15T00:41:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3253813105 # 530
* notice: last 14d: unq all: 39 5730
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77495
* notice: next accum: outdated-unq outdated-all / unq all: 1106 72238 / 1170 77968
* notice: prev exec diff / last date diff / accum: unq all: +0 +146 -0 -8 / +2 +403 -0 -0 / 2 403
* notice: removed / changed dates: [2022-09-30] / [2022-10-01 2022-10-14]

2022-10-14T16:11:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3251375042 # 529
* notice: last 14d: unq all: 39 5657
* notice: prev accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77519
* notice: next accum: outdated-unq outdated-all / unq all: 1103 71838 / 1169 77495
* notice: prev exec diff / last date diff / accum: unq all: +0 +120 -0 -144 / +2 +257 -0 -0 / 2 257