@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-03T08:09:28Z",
-  "count" : 409,
+  "timestamp" : "2022-10-16T00:43:11Z",
+  "count" : 396,
   "count_minmax" : [ 139, 409 ],
-  "count_decinc" : [ -0, +409 ],
+  "count_decinc" : [ -13, +409 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
