@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-15T16:08:09Z",
-  "count" : 259,
-  "count_minmax" : [ 138, 259 ],
-  "count_decinc" : [ -0, +259 ],
+  "timestamp" : "2022-10-16T00:43:11Z",
+  "count" : 407,
+  "count_minmax" : [ 138, 407 ],
+  "count_decinc" : [ -0, +407 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
