@@ -1,15 +1,10 @@
 {
-  "count": 5658,
+  "count": 5727,
   "uniques": 39,
   "clones": [
     {
-      "timestamp": "2022-10-01T00:00:00Z",
-      "count": 66,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-02T00:00:00Z",
-      "count": 409,
+      "count": 396,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 259,
+      "count": 407,
       "uniques": 2
     }
   ]
