@@ -1,3 +1,11 @@
+2022-10-16T00:43:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3257719066 # 533
+* notice: last 14d: unq all: 39 5727
+* notice: prev accum: outdated-unq outdated-all / unq all: 1106 72238 / 1171 77896
+* notice: next accum: outdated-unq outdated-all / unq all: 1108 72643 / 1172 78370
+* notice: prev exec diff / last date diff / accum: unq all: +0 +148 -0 -13 / +2 +407 -0 -0 / 2 407
+* notice: removed / changed dates: [2022-10-01] / [2022-10-02 2022-10-15]
+
 2022-10-15T16:08:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3256316387 # 532
 * notice: last 14d: unq all: 39 5658
